# Embarcatech-Fase_3_P7

./: README.md  main.c  pico_sdk_import.cmake
etapa_1/: CMakeLists.txt
etapa_2/assets/modelos/STL/: Montagem_chassis_ajuste_m3 - M3_assembly-1 M3_cap_screw-1.STL  Montagem_chassis_ajuste_m3 - M3_assembly-1 M3_nut-1.STL  Montagem_chassis_ajuste_m3 - Placa_sensores_reflexivos-1.STL  Montagem_chassis_ajuste_m3 - chassis_com_ajuste_m3-3.STL  Montagem_chassis_ajuste_m3 - suporte_sensores_com_ajuste-3.STL
etapa_2/src/: AbordagemClassica_rev3.ipynb  carrinho_seguidor_cor.c  testes_hc_sr_04-.c
etapa_3/src/bt_gatt_server/.cache/clangd/index/: btstack_config.h.C3C4DEA33D99C825.idx  btstack_config_common.h.3F5B8A15F7918428.idx  server.c.EA4DE52764B4E595.idx
etapa_3/src/bt_gatt_server_2/: CMakeLists.txt  server.c  temp_sensor.gatt
